syntax = "proto3";

package colonio.api;

import "core/colonio_api.proto";
import "core/map_api.proto";
import "core/pubsub_2d_api.proto";

message NoParam {
}

message Call {
  uint32 id = 1;
  uint32 channel = 2;

  oneof param {
    colonio.Connect colonio_connect = 1001;
    NoParam colonio_disconnect = 1002;
    colonio.SetPosition colonio_set_position = 1003;
    colonio.Send colonio_send = 1004;

    map_api.Get map_get = 2001;
    map_api.Set map_set = 2002;

    pubsub_2d.Publish pubsub_2d_publish = 3001;
  }
}

message Success {
}

message Failure {
  uint32 code = 1;
  string message = 2;
}

message Reply {
  uint32 id = 1;

  oneof param {
    Success success = 11;
    Failure failure = 12;

    colonio.ConnectReply colonio_connect = 1001;
    colonio.SetPositionReply colonio_set_position = 1003;

    map_api.GetReply map_get = 2001;
  }
}

message Event {
  uint32 channel = 1;

  oneof param {
    colonio.LogEvent colonio_log = 1001;
    colonio.OnReceive colonio_on_receive = 1002;

    pubsub_2d.OnEvent pubsub_2d_on = 3001;
  }
}
